--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ akshare==1.15.83
 arrow==1.2.3
 Django==5.1.6
 holidays==0.66
+lib_pybroker==1.2.6
 Logbook==1.8.0
 python_dateutil==2.9.0.post0
+TA_Lib==0.4.32
