--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ holidays==0.66
 lib_pybroker==1.2.6
 Logbook==1.8.0
 numba==0.60.0
-numpy
+numpy==2.2.3
 pandas==2.2.3
 python_dateutil==2.9.0.post0
 Requests==2.32.3
-TA_Lib
+schedule==1.2.2
+TA_Lib==0.4.32
 yahooquery==2.3.7
