--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ holidays==0.66
 lib_pybroker==1.2.6
 Logbook==1.8.0
 numba==0.60.0
-numpy==2.2.3
+numpy
 pandas==2.2.3
 python_dateutil==2.9.0.post0
 Requests==2.32.3
