--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ holidays==0.66
 lib_pybroker==1.2.6
 Logbook==1.8.0
 numba==0.60.0
-numpy
-pandas==2.2.3
+numpy==2.3.1
+pandas==2.3.0
 python_dateutil==2.9.0.post0
-Requests==2.32.3
+Requests==2.32.4
 schedule==1.2.2
 TA_Lib
-yahooquery==2.3.7
+yahooquery==2.4.1
