--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-akshare==1.17.8
+akshare==1.17.63
 arrow==1.2.3
 Django==5.1.6
 holidays==0.66
 lib_pybroker==1.2.6
 Logbook==1.8.0
 numba==0.60.0
-numpy
-pandas==2.3.0
+numpy==2.3.3
+pandas==2.3.3
 python_dateutil==2.9.0.post0
-Requests==2.32.4
+Requests==2.32.5
 schedule==1.2.2
 TA_Lib
 yahooquery==2.4.1
+tushare
