--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@ akshare==1.17.63
 arrow==1.2.3
 Django==5.1.6
 holidays==0.66
-lib-pybroker==1.2.6
+lib-pybroker==1.2.11
 Logbook==1.8.0
 numba==0.60.0
 numpy==1.26.4
 pandas==2.2.2
+playwright==1.56.0
 python-dateutil==2.9.0.post0
 requests==2.32.3
 schedule==1.2.2
@@ -16,4 +17,3 @@ TA-Lib==0.4.32
 tushare==1.4.24
 yahooquery==2.3.7
 django-cors-headers
-openpyxl==3.1.2
